<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gaji_anda"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etGaji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/gaji_anda"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dana_sosial"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etDanaSosial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:textSize="@dimen/text_size" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hutang"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etHutang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="number"
            android:textSize="@dimen/text_size" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tabungan"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etTabunganDanInvestasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="number"
            android:textSize="@dimen/text_size" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kebutuhan"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etKebutuhanSehariHari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="number"
            android:textSize="@dimen/text_size" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hiburan"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etHiburan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="number"
            android:textSize="@dimen/text_size" >
        </EditText>
    </LinearLayout>

</LinearLayout>